# rebirth

./: Makefile  README.md  meson.build  meson_options.txt  rebirth.c  run_qemu_x86_64.sh  startup.nsh  test.sh
efi/: boot.c  meson.build  util.c  version.h
src/: boot.c  log.c  log.h  meson.build  secure-boot.c  shim.c  util.c  util.h
tools/: elf2efi.py
