# -*- mode: meson -*-
# SPDX-License-Identifier: LGPL-2.1-or-later

option('efi-color-normal', type : 'string', value : 'lightgray,black',
       description : 'general boot loader color in "foreground,background" form, see constants from eficon.h')
option('efi-color-entry', type : 'string', value : 'lightgray,black',
       description : 'boot loader color for entries')
option('efi-color-highlight', type : 'string', value : 'black,lightgray',
       description : 'boot loader color for selected entries')
option('efi-color-edit', type : 'string', value : 'black,lightgray',
       description : 'boot loader color for option line edit')
option('menu', type : 'boolean', value : false,
       description : 'show efi menu')
